test/classes/bradc/weirdinit.good
Error: Variable 'a' used before defined (weirdinit.chpl:7)
